--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,9 @@
 
+
 <%= form_for @task do |f|%>
     <%= render 'error_messages' %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%#= f.label :title %>
+    <%#= f.text_field :title %>
     <br>
     <%= f.label :description %>
     <%= f.text_area :description %>
@@ -11,20 +12,41 @@
     <%= f.check_box :done %>
     <br>
     <%= f.label :registration_date %>
-    <%= f.datetime_select :registration_date %>
+    <%= f.text_field :registration_date %>
     <br>
+    <%= f.label :first_check %>
+    <%= f.check_box :first_check %>
     <%= f.label :first_reminder_date %>
-    <%= f.datetime_select :first_reminder_date %>
+    <%= f.text_field :first_reminder_date %>
+    <!--<%#= f.datetime_select :first_reminder_date %>-->
+
     <br>
+    <%= f.label :second_check %>
+    <%= f.check_box :second_check %>
     <%= f.label :second_reminder_date %>
-    <%= f.datetime_select :second_reminder_date %>
+    <%= f.text_field :second_reminder_date %>
     <br>
+    <%= f.label :third_check %>
+    <%= f.check_box :third_check %>
     <%= f.label :third_reminder_date %>
-    <%= f.datetime_select :third_reminder_date %>
+    <%= f.text_field :third_reminder_date %>
     <br>
     <%= f.label :subject_id %>
+    
+    <!--<input type="text" list="languages">-->
+    <!--<datalist id="languages">-->
+    <!--  <option value="HTML" label>-->
+    <!--</datalist>-->
+
+    <!--<%#= f.text_field :subject_id %>-->
     <%= f.collection_select(:subject_id, Subject.all, :id, :name, :prompt => true ) %>
+    <br/>
+    <label for="subject_name">Subject name</label>
+    <input type="text" name="subject_name" id="subject_name"/>
+
+
     <br>
     <%= f.submit class: "btn btn-primary" %>
+    
     
 <% end %>
