--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,6 @@ test:current_user > <%= current_user.email if current_user %>
 
 <% unless @tasks.empty? %>
   <table>
-    <th>done?</th>
     <th>title</th>
     <th>description</th>
     <th>registration_date</th>
@@ -18,21 +17,32 @@ test:current_user > <%= current_user.email if current_user %>
     
     <% @tasks.each do |t| %>
     <tr>
+        <td><%= link_to t.subject.name, subject_path(t.subject_id) %></td>
+        <td><%= link_to t.description,  task_path(t) %></td>
+        <td><%= t.registration_date %></td>
         <td>
-          <%= link_to task_toggle_path(t), method: :patch, remote: true do %>
-            <div id="status-<%= t.id%>">
-                <%= t.done ? "\u2611" : "\u2610"  %>
+          <%= link_to task_toggle_path( task_id: t.id, which_checkbox:"first_check"), method: :patch, remote: true do %>
+            <div id="status-first_check-<%= t.id%>">
+                <%= t.first_check ? "\u2611" : "\u2610"  %>
             </div> 
           <% end %>
         </td>
-        <td><%= link_to t.subject.name, task_path(t) %></td>
-        <td><%= t.description %></td>
-        <td><%= t.registration_date %></td>
-        <td><%= t.first_check %></td>
         <td><%= t.first_reminder_date %></td>
-        <td><%= t.second_check %></td>
+        <td>
+          <%= link_to task_toggle_path( task_id: t.id, which_checkbox:"second_check"), method: :patch, remote: true do %>
+            <div id="status-second_check-<%= t.id%>">
+                <%= t.first_check ? "\u2611" : "\u2610"  %>
+            </div> 
+          <% end %>
+        </td>
         <td><%= t.second_reminder_date %></td>
-        <td><%= t.third_check %></td>
+        <td>
+          <%= link_to task_toggle_path( task_id: t.id, which_checkbox:"third_check"), method: :patch, remote: true do %>
+            <div id="status-third_check-<%= t.id%>">
+                <%= t.first_check ? "\u2611" : "\u2610"  %>
+            </div> 
+          <% end %>        
+        </td>
         <td><%= t.third_reminder_date %></td>
         <td><%= t.subject_id %></td>
         
