--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,10 +1,10 @@
-index
-<%= link_to 'New Task', new_task_path %>
-test:current_user > <%= current_user.email if current_user %>
+<h1>Subject page: <%= @subject.name %> </h1>
+
+<%= link_to 'New Task', new_task_path(subject_id: @subject.id ) %>
+
 
 <% unless @tasks.empty? %>
   <table>
-    <th>title</th>
     <th>description</th>
     <th>registration_date</th>
     <th>first check</th>
@@ -13,13 +13,11 @@ test:current_user > <%= current_user.email if current_user %>
     <th>second reminder date</th>
     <th>third check</th>
     <th>third reminder date</th>
-    <th>subject_id</th>
-    
+
     <% @tasks.each do |t| %>
     <tr>
-        <td><%= link_to t.subject.name, subject_path(t.subject_id) %></td>
         <td><%= link_to t.description,  task_path(t) %></td>
-        <td><%= timeParse(t.registration_date) %></td>
+        <td><%= t.registration_date %></td>
         <td>
           <%= link_to task_toggle_path( task_id: t.id, which_checkbox:"first_check"), method: :patch, remote: true do %>
             <div id="status-first_check-<%= t.id%>">
@@ -27,7 +25,7 @@ test:current_user > <%= current_user.email if current_user %>
             </div> 
           <% end %>
         </td>
-        <td><%= timeParse(t.first_reminder_date) %></td>
+        <td><%= t.first_reminder_date %></td>
         <td>
           <%= link_to task_toggle_path( task_id: t.id, which_checkbox:"second_check"), method: :patch, remote: true do %>
             <div id="status-second_check-<%= t.id%>">
@@ -35,7 +33,7 @@ test:current_user > <%= current_user.email if current_user %>
             </div> 
           <% end %>
         </td>
-        <td><%= timeParse(t.second_reminder_date) %></td>
+        <td><%= t.second_reminder_date %></td>
         <td>
           <%= link_to task_toggle_path( task_id: t.id, which_checkbox:"third_check"), method: :patch, remote: true do %>
             <div id="status-third_check-<%= t.id%>">
@@ -43,9 +41,8 @@ test:current_user > <%= current_user.email if current_user %>
             </div> 
           <% end %>        
         </td>
-        <td><%= timeParse(t.third_reminder_date) %></td>
-        <td><%= t.subject_id %></td>
-        
+        <td><%= t.third_reminder_date %></td>
+
 
     </tr>
   <% end %>
@@ -53,3 +50,8 @@ test:current_user > <%= current_user.email if current_user %>
 <% else %>
     <p>No Task</p>
 <% end %>
+
+<br/>
+<%= link_to 'Back', tasks_path %> 
+<%= link_to 'Edit', edit_subject_path %>
+<%= link_to "Delete", @subject, method: :delete, data: { confirm: "Are you sure?" } %>
