--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,6 @@
     </nav>
   </div>
   
-  <%= debug(params) if Rails.env.development? %>
+  <%#= debug(params) if Rails.env.development? %>
 
 </header>
