--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,7 +3,7 @@
 <br>
 description :<%= @task.description %>
 <br>
-subject :<%= @task.subject.name %>
+subject :<%= link_to @task.subject.name, subject_path(id: @task.subject_id) %>
 <br>
 done? :<%= @task.done ? "\u2611" : "\u2610"  %>
 
