--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,7 @@
-edit page
-
+<div class="page-title">Edit: <%= @task.description %></div>
+    
 <%= render "form"%>
-<%= link_to 'Cancel', tasks_path %>
+      
+  
+    
+
