--- a/app/views/tasks/toggle.js.erb
+++ b/app/views/tasks/toggle.js.erb
@@ -1,6 +1,7 @@
 <!--$('#status').html("aaaa");-->
 <!--console.log("from toggle.js.erb");-->
 <!--$('#status').html("<%#= j(@status) %>");-->
-$('#<%= j(@element) %>').html("<%= j(@status) %>");
+<!-- // $('#<%#= j(@element) %>').html("<%= j(@status) %>"); -->
+$('#<%= j(@element) %>').html("<%=j( fa_icon(@status) )%>");
 
 
