--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,24 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
   </head>
 
   <body>
     <%= render 'layouts/header' %>
-    <% flash.each do |key, message| %>
-        <div class="text-center alert
-                    alert-<%= key == 'notice' ? 'success' : 'danger' %>">
-          <%= message %>
-        </div>
-    <% end %>
     
-    <%= yield %>
+    <div class="container main-wrapper">
+      <% flash.each do |key, message| %>
+          <div class="text-center alert
+                      alert-<%= key == 'error' ? 'danger' : 'success' %>">
+            <%= message %>
+          </div>
+      <% end %>
+      
+      
+      <%= yield %>
+    </div>
   </body>
   
   
