--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,52 +1,69 @@
 
 
+
 <%= form_for @task do |f|%>
     <%= render 'error_messages' %>
     <%#= f.label :title %>
     <%#= f.text_field :title %>
-    <br>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-    <br>
-    <%= f.label :done %>
-    <%= f.check_box :done %>
-    <br>
-    <%= f.label :registration_date %>
-    <%= f.text_field :registration_date %>
-    <br>
-    <%= f.label :first_check %>
-    <%= f.check_box :first_check %>
-    <%= f.label :first_reminder_date %>
-    <%= f.text_field :first_reminder_date %>
-    <!--<%#= f.datetime_select :first_reminder_date %>-->
-
-    <br>
-    <%= f.label :second_check %>
-    <%= f.check_box :second_check %>
-    <%= f.label :second_reminder_date %>
-    <%= f.text_field :second_reminder_date %>
-    <br>
-    <%= f.label :third_check %>
-    <%= f.check_box :third_check %>
-    <%= f.label :third_reminder_date %>
-    <%= f.text_field :third_reminder_date %>
-    <br>
-    <%= f.label :subject_id %>
+    <br>    
+        <div class="col-md-6 col-md-offset-3">
     
-    <!--<input type="text" list="languages">-->
-    <!--<datalist id="languages">-->
-    <!--  <option value="HTML" label>-->
-    <!--</datalist>-->
-
-    <!--<%#= f.text_field :subject_id %>-->
-    <%= f.collection_select(:subject_id, Subject.all, :id, :name, :prompt => true ) %>
-    <br/>
-    <label for="subject_name">Subject name</label>
-    <input type="text" name="subject_name" id="subject_name"/>
-
-
-    <br>
-    <%= f.submit class: "btn btn-primary" %>
+        <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, class: 'form-control' %>
+        </div>    
+    
+        <div class="form-group">
+            <%= f.label :registration_date, "Start date" %>
+            <%= f.text_field :registration_date, class: 'form-control datetimepicker' %>
+        </div> 
+    
+        <div class="form-group">    
+            <%= f.label :first_check %>
+            <%= f.check_box :first_check, class: 'checkbox' %>
+        </div>
+    
+        <div class="form-group">    
+            <%= f.label :first_reminder_date %>
+            <%= f.text_field :first_reminder_date, class: 'form-control datetimepicker' %>
+        </div>
+        <div class="form-group">    
+            <%= f.label :second_check %>
+            <%= f.check_box :second_check, class: 'checkbox'  %>
+        </div>
+        <div class="form-group">    
+            <%= f.label :second_reminder_date %>
+            <%= f.text_field :second_reminder_date, class: 'form-control datetimepicker'  %>
+        </div>
+        <div class="form-group">    
+            <%= f.label :third_check %>
+            <%= f.check_box :third_check, class: 'checkbox'  %>
+        </div>
+        <div class="form-group">    
+            <%= f.label :third_reminder_date %>
+            <%= f.text_field :third_reminder_date, class: 'form-control datetimepicker'  %>
+        </div>
     
     
+    
+    
+        
+        <div class="form-group">  
+            <%= f.label :subject_id, "Subject" %>
+            <input type="checkbox" id="new_task_toggle" unchecked data-toggle="toggle" 
+                data-on="Create New Subject" data-off="Select Subject" data-onstyle="primary" data-offstyle="default" data-width="200">
+        
+            <div id="existing_task">
+               <%= f.collection_select(:subject_id, Subject.all, :id, :name, {:prompt => true}, {class: 'form-control'} ) %>
+            </div>
+                
+            <div id="new_task_name">
+                <input type="text" name="subject_name" id="subject_name" class="form-control"/>
+            </div>
+        </div>
+        <br/>
+        <%= f.submit class: "btn btn-primary" %>
+        <%= link_to 'Cancel', :back, class: "btn btn-default pull-right" %> 
+
+</div>    
 <% end %>
