--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,19 +1,30 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
-<%= form_for(@user) do |f| %>
-  <%= render 'error_messages' %>
-  <%= f.label :firstname %>
-  <%= f.text_field :firstname %>
-  <br>
-  <%= f.label :lastname %>
-  <%= f.text_field :lastname %>
-  <br>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <br>
-  <%= f.label :admin %>
-  <%= f.check_box :admin %>
-  <br>
-  <%= f.submit "Update", class: "btn btn-primary" %>
+<div class="page-title">Edit Profile: <%= @user.full_name %></div>
 
-<% end %>
+  <br>    
+        <div class="col-md-6 col-md-offset-3">
+    
+        
+  <%= form_for(@user) do |f| %>
+    <%= render 'error_messages' %>
+    
+    <div class="form-group">
+    <%= f.label :firstname %>
+    <%= f.text_field :firstname %>
+    </div>
+    <br>
+    <div class="form-group">
+    <%= f.label :lastname %>
+    <%= f.text_field :lastname %>
+    </div>
+    <br>
+    <div class="form-group">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    </div>
+    <br>
+
+    <%= f.submit "Update", class: "btn btn-primary" %>
+  
+  <% end %>
+
+</div>
