--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users#index</h1>
 
-<table>
+<table class="table-striped">
   <tr>
     <th>Action</th>
     <th>Admin</th>
@@ -9,7 +9,7 @@
   </tr>
   <% @users.each do |user| %>
     <tr>
-      <td><%= link_to "Edit", edit_user_path(user) %>|<%= link_to "Del", user, method: :delete, data: { confirm: 'Are you sure?' } if logged_in? && current_user.admin? %></td>
+      <td><%= link_to "Edit", edit_user_path(user) %> | <%= link_to "Del", user, method: :delete, data: { confirm: 'Are you sure?' } if logged_in? && current_user.admin? %></td>
       <td><%= "\u{2611}" if user.admin %></td>
       <td><%= link_to "#{user.firstname} #{user.lastname}", user %></td>
       <td><%= user.email %></td>
