--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -33,7 +33,7 @@
                 <%= t.third_check ?  fa_icon("check-square") : fa_icon("square")  %>
               </span>
             <% end %>
-            3rd <%= timeParse(t.second_reminder_date) %>
+            3rd <%= timeParse(t.third_reminder_date) %>
         </div>
         
         
